--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,10 @@ body {
   font-family: sans-serif;
   line-height: 1;
   font-weight: 400;
+  color: #fff;
 }
 
-/* MAIN HEADER */
+/* MAIN HEADER  -----------------------------------------------------------------------------*/
 
 .main-header {
   position: sticky;
@@ -69,4 +70,120 @@ body {
   list-style: none;
   color: #fff;
   font-size: 2rem;
+}
+
+/* MAIN HERO  -------------------------------------------------------------------------------*/
+
+.section-hero {
+  background-color: var(--primary);
+  padding: 1rem 0 9.6rem 0;
+  height: calc(100vh - 35rem);
+  width: 100%;
+  display: flex;
+}
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
+  font-weight: 700;
+  color: #fff;
+  letter-spacing: -0.5px;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  color: var(--primary);
+  font-size: 2.5rem;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+}
+
+.hero-description {
+  font-size: 3rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.hero_text {
+  padding-right: 3rem;
+}
+
+.cta-button {
+  gap: 0.5rem;
+
+  padding: 1.6rem 3.2rem;
+  font-weight: 600;
+  font-size: 2rem;
+  width: 18rem;
+  height: 6.5rem;
+
+  border-radius: 0.9rem;
+  border: none;
+
+  transition: all 300ms;
+}
+
+.cta-button:hover {
+  color: var(--grey-2);
+  background-color: transparent;
+  box-shadow: inset 0 0 0 0.4rem var(--grey-2);
+}
+
+.hero-table {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1.5rem;
+  width: 50rem;
+  height: 48rem;
+  transform: skew(-5deg, -1deg);
+
+  color: black;
+}
+
+.hero-table-element {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--primary);
+  border: 0.5rem solid black;
+
+  border-radius: 3%;
+}
+
+.learn-more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  height: calc(100vh - 60rem);
+  width: 100%;
+}
+
+.learn-more-button {
+  padding: 1rem 2rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+  width: 13rem;
+  height: 5rem;
+
+  border-radius: 0.9rem;
+  border: none;
+
+  transition: all 300ms;
 }
