skeleton for subject components

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ body {
 /* MAIN HEADER  -----------------------------------------------------------------------------*/
 
 .main-header {
-  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -186,4 +185,35 @@ body {
   border: none;
 
   transition: all 300ms;
+}
+
+.subject-component {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 1rem;
+
+  transition: all 300ms;
+}
+
+.subject-component:hover {
+  transform: translate(2px, -2px);
+  box-shadow: black -7px 7px;
+}
+
+.subject-component p {
+  color: black;
+}
+
+.subject-table {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: 50vh;
+  gap: 2rem;
+  margin: 1rem;
+}
+
+.subject-component-heading {
+  padding: 0.5rem;
+  background-color: #071e33;
 }
