--- a/src/index.css
+++ b/src/index.css
@@ -217,3 +217,34 @@ body {
   padding: 0.5rem;
   background-color: #071e33;
 }
+
+/* Subject screen --------------------------------------- */
+
+.subject-screen-header {
+  width: 100%;
+  font-size: 5rem;
+  color: black;
+  text-align: center;
+  margin: 2.5rem 0;
+}
+
+.subject-page-grid {
+  padding: 0 3rem;
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  grid-template-rows: 1fr;
+  gap: 5rem;
+  width: 100%;
+}
+
+.topic-table {
+  color: black;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 3rem;
+}
+
+.subtopic-description {
+  padding: 1.5rem 3rem;
+}
